# OpenGL_3DRenderingEngine

./: .gitignore  CMakeLists.txt  README.md  README.txt
Common/: CMakeLists.txt  Common.props  sample-filter.cpp  shader.cpp  shader.hpp
Common/GLFW/: CMakeLists.txt
Common/GLSL-Shader-Includes-master/: Shadinclude.hpp
Common/assimp/: CMakeLists.txt
Common/assimp/code/X3D/: X3DImporter.cpp  X3DImporter.hpp  X3DVocabulary.cpp
Common/glew/: CMakeLists.txt
Common/imgui/examples/: imgui_impl_glfw.cpp  imgui_impl_opengl3.h
Common/models/Powerplant/: Sample_MTL_File.mtl  bounds.txt
Common/shaders/Compute/: EdgeAwareGaussianBlurX.comp  EdgeAwareGaussianBlurY.comp  GaussianBlurX.comp  GaussianBlurY.comp
Common/shaders/Deferred/: AmbientOcclusionPass.frag  AmbientOcclusionPass.vert  DeferredBRDF.frag  DeferredPhong.frag  LocalLight.frag  LocalLight.vert
Common/shaders/Forward/: BlinnLighting.vert  BlinnShading.frag  DebugDraw.frag  DebugDraw.vert  DepthMap.frag  DepthMap.vert  FlatEmission.frag  FlatEmission.vert  GBuffer.vert  Gbuffer.frag  LineRender.frag  LineRender.vert  PhongLighting.vert  PhongShading.frag  SolidLighting.frag  SolidShading.vert  sky.frag  sky.vert
Common/shaders/Include/: MeshProperties.glsl  ShaderGlobals.glsl  blinn.glsl  brdf.glsl  brdfLocal.glsl  environmentMap.glsl  general_lighting.vert  general_shading.frag  lightDepth.glsl  lightingUniforms.glsl  phong.glsl  phongLocal.glsl  reflection.glsl  refraction.glsl  shadow.glsl  toneMapping.glsl  uv.glsl
Common/textures/Environment/: 14-Hamarikyu_Bridge_B_3k.irr.hdr  Alexs_Apt_2k.hdr  Alexs_Apt_2k.irr.hdr  Arches_E_PineTree_3k.irr.hdr  Barce_Rooftop_C_3k.irr.hdr  Factory_Catwalk_2k.irr.hdr  Footprint_Court_2k.irr.hdr  MonValley_A_LookoutPoint_2k.irr.hdr  NatureLabFront_IBL_Ref.hdr  NatureLabFront_IBL_Ref.irr.hdr  Newport_Loft_Ref.irr.hdr  Playa_Sunrise.hdr  Playa_Sunrise.irr.hdr  Road_to_MonumentValley_Ref.irr.hdr  Sierra_Madre_B_Ref.hdr  Sierra_Madre_B_Ref.irr.hdr  Summi_Pool_3k.irr.hdr  Tropical_Beach_3k.hdr  Tropical_Beach_3k.irr.hdr
Projects/: CMakeLists.txt  VS_CS350.sln
Projects/RenderingEngine/: BspTree.h  CMakeLists.txt  Camera.h  GBuffer.cpp  GLApplication.cpp  LightComponent.cpp  LightComponent.h  LightHandle.h  LightSystem.h  MainScene.cpp  MainScene.h  MaterialHandle.h  MaterialSystem.h  Mesh.h  ObjectComponent.cpp  Octree.cpp  RenderingComponent.cpp  RenderingEngine.vcxproj.filters  SpacialTree.cpp  SpacialTree.h  TransformComponent.h  Utilities.h  imgui.ini
Projects/RenderingEngine/Collision/: VolumeComponent.h
Projects/RenderingEngine/GameObjects/: GameObject.cpp  GameObject.h  ObjectComponent.h
Projects/RenderingEngine/Hierarchy/: ParentChildComponent.cpp  ParentChildComponent.h
Projects/RenderingEngine/ntg/: radial.h  (+5 more)
RenderingEngine/: CMakeLists.txt  MainScene.cpp  MainScene.h
RenderingEngine/GameObjects/: GameObject.h  ObjectComponent.cpp
RenderingEngine/Hierarchy/: ParentChildComponent.cpp
RenderingEngine/Lighting/: LightComponent.cpp  LightHandle.cpp  LightSystem.cpp  LightSystem.h
RenderingEngine/Materials/: Material.h  MaterialComponent.cpp  MaterialHandle.h  MaterialSystem.h  Texture.cpp  Texture.h  material.cpp
RenderingEngine/Mesh/: Mesh.cpp  Mesh.h
RenderingEngine/Rendering/: DebugDraw.cpp  FaceNormalRender.cpp  GBuffer.cpp  GBuffer.h  RenderingComponent.cpp  RenderingComponent.h  RenderingEngine.vcxproj  RenderingEngine.vcxproj.filters  ShaderGlobalSystem.cpp  ShaderGlobalSystem.h  SolidRender.cpp  SolidRender.h  VertexNormalRender.cpp  VertexNormalRender.h
RenderingEngine/SpacialPartitioning/: BspTree.cpp  Octree.cpp  Octree.h  SpacialTree.h  octree.natvis
RenderingEngine/Transform/: TransformComponent.cpp  TransformComponent.h
RenderingEngine/Utilities/: IrradianceMap.h  LowDiscrepancyRandom.h
RenderingEngine/Volumes/: BoxVolumeComponent.cpp
RenderingEngine/camera/: Camera.cpp  CameraTransform.cpp
RenderingEngine/ntg/: hyperplane.h  ntg.vcxproj  ray.h  simplex.inl  test.cpp
Reports/Project1/: jordanh_proj1.md
Reports/Project2/: jordanh_proj2.md
Reports/Project3/: jordanh_proj3.md
Reports/Project4/: jordanh_proj4.md
VS_CS350/: VS_CS350.sln  imgui.ini
VS_CS350/Assignment_1/: Affine.cpp  Affine.h  Assignment1Scene.cpp  Assignment1Scene.h  Camera.cpp  Camera.h  CameraTransform.cpp  ChildListComponent.cpp  Common.lnk  FaceNormalRender.cpp  FaceNormalRender.h  GBuffer.cpp  GBuffer.h  GLApplication.cpp  GameObject.h  Light.h  LightComponent.cpp  LightHandle.cpp  LightHandle.h  LightSystem.cpp  LightSystem.h  Material.h  MaterialComponent.cpp  Mesh.cpp  Mesh.h  ParentComponent.cpp  ParentComponent.h  RenderingComponent.cpp  RenderingComponent.h  SolidRender.cpp  SolidRender.h  Texture.cpp  TransformComponent.cpp  TransformComponent.h  Utilities.h  VertexGlobalSystem.cpp  VertexNormalRender.cpp  VertexNormalRender.h  bounds.h  imgui.ini  (+1 more)
VS_CS350/Assignment_2/: Assignment_2.vcxproj.filters  Assignment_2_old.vcxproj.filters  ChildListComponent.h  FaceNormalRender.cpp  GBuffer.cpp  GBuffer.h  GLApplication.cpp  GLHelper.h  GameObject.h  Light.h  LightComponent.cpp  LightSystem.h  MainScene.cpp  MainScene.h  MaterialSystem.h  Mesh.cpp  Mesh.h  ObjectComponent.cpp  ObjectComponent.h  RenderingComponent.cpp  SolidRender.cpp  TransformComponent.cpp  TransformComponent.h  Utilities.h  VertexNormalRender.cpp  bounds.h
VS_CS350/RenderingEngine/: BspTree.cpp  BspTree.h  CMakeLists.txt  Camera.cpp  DebugDraw.cpp  DebugDraw.h  FaceNormalRender.cpp  GBuffer.cpp  GLApplication.cpp  GameObject.h  LightComponent.cpp  LightSystem.cpp  MainScene.cpp  Material.h  MaterialComponent.cpp  MaterialComponent.h  MaterialSystem.cpp  MaterialSystem.h  Mesh.cpp  Mesh.h  Octree.cpp  Octree.h  ParentChildComponent.cpp  ParentChildComponent.h  RenderingComponent.cpp  RenderingEngine.vcxproj  RenderingEngine.vcxproj.filters  SolidRender.cpp  SolidRender.h  SpacialTree.cpp  SpacialTree.h  Texture.h  TransformComponent.cpp  VertexGlobalSystem.cpp  VertexGlobalSystem.h  VertexNormalRender.cpp  VertexNormalRender.h  VolumeComponent.cpp  VolumeComponent.h  hit.h  (+1 more)
(+71 files in other folders)
